k8s/postgres/postgres_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-pfe
  namespace: pfe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: ankane/pgvector:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: db-data
        hostPath:
          path: /home/mario/pfe-fast-data/database-pfe/postgres_data
          type: Directory
