k8s/postgres/postgres_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: pfe
spec:
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 30432
  selector:
    app: postgres
